--- a/app/.env.example
+++ b/app/.env.example
@@ -63,3 +63,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Midtrans Configuration
+MIDTRANS_SERVER_KEY=SB-Mid-server-key
+MIDTRANS_CLIENT_KEY=SB-Mid-client-key
+MIDTRANS_ENVIRONMENT=sandbox
+MIDTRANS_SANITIZED=true
+MIDTRANS_3DS=true
